--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "start": "next start",
     "lint": "next lint",
     "tauri": "tauri"
-
   },
   "dependencies": {
+    "@tauri-apps/api": "^1.6.0",
     "next": "14.2.11",
     "react": "^18",
     "react-dom": "^18"
