--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -17,7 +17,7 @@ tauri-build = { version = "1.5.5", features = [] }
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.8.0", features = [] }
+tauri = { version = "1.8.0", features = ["system-tray"] }
 winapi = "0.3.9"
 chrono = "0.4.31"
 sysinfo = "0.29.5"
